tests/ui/compile-flags/invalid/need-crate-arg-ignore-tidy$x.rs
// issue: 113981

pub fn main() {}

//~? ERROR invalid character '$' in crate name: `need_crate_arg_ignore_tidy$x`
